--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "constant": "^1.0.2",
     "formik": "^2.4.3",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-toast-notifications": "^2.5.1",
